--- a/clima.html
+++ b/clima.html
@@ -67,7 +67,7 @@
     <script>
         async function getWeather() {
             const apiKey = "0370775959e74af8a9440433241210"; // Sua chave de API
-            const city = "São Paulo"; // Altere a cidade conforme necessário
+            const city = "Paulista"; // Altere a cidade conforme necessário
             const url = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}&lang=pt`;
 
             try {
