--- a/index.html
+++ b/index.html
@@ -3,92 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Previsão do Tempo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #ffffff;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .weather-box {
-            padding: 30px;
-            border-radius: 15px;
-            background-color: #1e1e1e;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            width: 320px;
-        }
-        h1 {
-            color: #BB86FC;
-            margin-bottom: 20px;
-        }
-        .temperature {
-            font-size: 48px;
-            margin: 10px 0;
-            color: #03DAC6;
-        }
-        .description {
-            font-size: 22px;
-            margin: 5px 0;
-        }
-        .location {
-            font-size: 18px;
-            color: #B0B0B0;
-            margin-bottom: 20px;
-        }
-        .update-btn {
-            padding: 10px 20px;
-            background-color: #BB86FC;
-            color: #121212;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .update-btn:hover {
-            background-color: #3700B3;
-        }
-    </style>
+    <title>Clima de Vale Verde</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="weather-box">
-        <h1>Previsão do Tempo</h1>
-        <div class="temperature" id="temperature">--°C</div>
-        <div class="description" id="description">Descrição</div>
-        <div class="location" id="location">Localização</div>
-        <button class="update-btn" onclick="getWeather()">Atualizar</button>
+    <h1>Clima em Vale Verde, Saints</h1>
+    <div id="clima">
+        <p>Carregando...</p>
     </div>
 
     <script>
-        async function getWeather() {
-            const apiKey = "0370775959e74af8a9440433241210"; // Sua chave de API
-            const city = "Paulista"; // Altere a cidade conforme necessário
-            const url = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}&lang=pt`;
+        const apiKey = '0370775959e74af8a9440433241210'; // Sua chave da WeatherAPI
+        const url = `http://api.weatherapi.com/v1/current.json?key=${apiKey}&q=Engenho Maranguape,Brazil`;
 
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error(`Erro: ${response.status} - ${response.statusText}`);
-                }
+        $.getJSON(url, function(data) {
+            const location = 'Vale Verde, Saints';  // Substituindo o nome da cidade
+            const temp = data.current.temp_c;
+            const condition = data.current.condition.text;
+            const humidity = data.current.humidity;
 
-                const weatherData = await response.json();
-                // Atualizando os elementos do HTML com os dados
-                document.getElementById('temperature').textContent = `${weatherData.current.temp_c}°C`;
-                document.getElementById('description').textContent = weatherData.current.condition.text;
-                document.getElementById('location').textContent = `${weatherData.location.name}, ${weatherData.location.country}`;
-            } catch (error) {
-                console.error(error);
-                alert('Não foi possível obter a previsão do tempo. Tente novamente mais tarde.');
-            }
-        }
-
-        // Chama a função ao carregar a página
-        window.onload = getWeather;
+            $('#clima').html(`
+                <p>Temperatura: ${temp}°C</p>
+                <p>Condição: ${condition}</p>
+                <p>Umidade: ${humidity}%</p>
+            `);
+        });
     </script>
 </body>
 </html>
